fix: dark mode ui bugs

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #303030;
+  background: linear-gradient(45deg, black, #303030);
   padding: 8px 24px;
   box-shadow: 0 0 16px #ccc;
   position: fixed;
@@ -51,14 +51,14 @@
 
 @media (prefers-color-scheme: dark) {
   .header {
-    background-color: #222;
+    background: #222;
     color: #f5f7f9;
     box-shadow: none;
   }
 
   @media screen and (min-width: 768px) {
     .header {
-      background-color: #303030;
+      background: #303030;
     }
   }
 }
