--- a/src/styles/Login.module.scss
+++ b/src/styles/Login.module.scss
@@ -38,7 +38,13 @@
 
 @media (prefers-color-scheme: dark) {
   .loginCard {
-    background-color: #252525;
+    background-color: #333333;
     color: #f5f7f9;
+  }
+
+  .inputField {
+    input:disabled {
+      -webkit-text-fill-color: #9d9d9d;
+    }
   }
 }
